$Id$
---------------------------------------------------------------------------

Version 0.4.1 (...)

- Unknown "." commands are no longer passed through to the database engine
  by default, resulting in better error messages.

---------------------------------------------------------------------------
Version 0.4 (3 November, 2008)

- Now calls grizzled.cmdline.CommandLineParser's die_with_usage() method,
  instead of the deprecated show_usage() method.
- Now supports shell-style variables. See the User's Guide for details.

---------------------------------------------------------------------------
Version 0.3.2 (8 September, 2008)

- Now properly bundles ez_setup.py
- Now supports Gadfly (http://gadfly.sourceforge.net/)

---------------------------------------------------------------------------
Version 0.3.1 (5 August, 2008)

- Fixed bug with --database option introduced in version 0.3
- When loading a file (via ".load" at the prompt or @file on the command line),
  sqlcmd no longer adds the contents to the history.

---------------------------------------------------------------------------
Version 0.3 (22 July, 2008)

- Ctrl-C (SIGINT) at the command prompt now simply returns to the command
  prompt without doing anything, instead of exiting sqlcmd. Thanks to James
  William Pye (x /at/ jwp.name) for the suggestion.
- Added .echo command
- Added ability to specify an on-connect script for each database listed
  in the configuration file. sqlcmd runs the on-connect script,  immediately
  after connecting to the database.
- Moved WrappingLogFormatter to Grizzled API (grizzled.log module).
- Moved str2bool() function to Grizzled API (grizzled.misc module).

---------------------------------------------------------------------------
Version 0.2.3 (21 July, 2008)

- Fixed bug that caused sqlcmd to crash when displaying binary data.

---------------------------------------------------------------------------
Version 0.2.2 (18 July, 2008)
